[tool.poetry]
name = "evolvedb"
version = "0.1.0"
description = "Migrações, bancos de dados evolutivos (Alembic e SQLAlchemy)"
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-blue = "^0.0.1"
pytest-isort = "^3.1.0"
taskipy = "^1.11.0"


[tool.poetry.group.prod.dependencies]
alembic = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules" 

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=code -vv"
post_test = "coverage html"